--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,9 +1,6 @@
-# Automatically generated on 2020-10-10 UTC from https://codemagic.io/app/5f80fe619ccdabe88067c950/settings
-# Note that this configuration is not an exact match to UI settings. Review and adjust as necessary.
-
 workflows:
   default-workflow:
-    name: Default Workflow
+    name: YAML Workflow
     max_build_duration: 90
     environment:
       flutter: stable
