--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,7 +14,7 @@ workflows:
       events:
         - push
       branch_patterns:
-        - pattern: 'master'
+        - pattern: '*'
       cancel_previous_builds: true
     scripts:
       - echo "flutter.sdk=$HOME/programs/flutter" > "$FCI_BUILD_DIR/android/local.properties"
