--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -26,31 +26,29 @@ workflows:
         - pattern: '*'
       cancel_previous_builds: true
     scripts:
-      - echo "flutter.sdk=$HOME/programs/flutter" > "$FCI_BUILD_DIR/android/local.properties"
-      - flutter packages pub get
-      - name: Unit tests
-        script: |
-          flutter test --machine > test-results.json
-        test_report: test-results.json
       - |
-        # set up debug keystore
-        rm -f ~/.android/debug.keystore
-        keytool -genkeypair \
-          -alias androiddebugkey \
-          -keypass android \
-          -keystore ~/.android/debug.keystore \
-          -storepass android \
-          -dname 'CN=Android Debug,O=Android,C=US' \
-          -keyalg 'RSA' \
-          -keysize 2048 \
-          -validity 10000
+        # set up key.properties
+        echo $CM_KEYSTORE | base64 --decode > /tmp/keystore.keystore
+        cat >> "$FCI_BUILD_DIR/android/key.properties" <<EOF
+        storePassword=$CM_KEYSTORE_PASSWORD
+        keyPassword=$CM_KEY_ALIAS_PASSWORD
+        keyAlias=$CM_KEY_ALIAS_USERNAME
+        storeFile=/tmp/keystore.keystore
+        EOF
       - |
         # set up local properties
         echo "flutter.sdk=$HOME/programs/flutter" > "$FCI_BUILD_DIR/android/local.properties"
       - cd . && flutter packages pub get
-      - cd . && flutter build apk --debug
+      - cd . && flutter build appbundle --release
       - find . -name "Podfile" -execdir pod install \;
-      - cd . && flutter build ios --debug --no-codesign
+      - keychain initialize
+      - app-store-connect fetch-signing-files "$(xcode-project detect-bundle-id)"
+        --type IOS_APP_DEVELOPMENT --create
+      - keychain add-certificates
+      - cd . && flutter build ios --release --no-codesign
+      - xcode-project use-profiles
+      - cd . && xcode-project build-ipa --workspace "ios/Runner.xcworkspace" --scheme
+        "Runner"
     artifacts:
       - build/**/outputs/**/*.apk
       - build/**/outputs/**/*.aab
