--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -39,7 +39,7 @@ workflows:
       - |
         # set up local properties
         echo "flutter.sdk=$HOME/programs/flutter" > "$FCI_BUILD_DIR/android/local.properties"
-      - cd . && flutter packages pub get
+      - flutter packages pub get
       - cd . && flutter build appbundle --release
       - find . -name "Podfile" -execdir pod install \;
       - keychain initialize
