--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -27,29 +27,31 @@ workflows:
           include: true
           target: true
     scripts:
-      - |
-        # set up key.properties
-        echo $CM_KEYSTORE | base64 --decode > /tmp/keystore.keystore
-        cat >> "$FCI_BUILD_DIR/android/key.properties" <<EOF
-        storePassword=$CM_KEYSTORE_PASSWORD
-        keyPassword=$CM_KEY_ALIAS_PASSWORD
-        keyAlias=$CM_KEY_ALIAS_USERNAME
-        storeFile=/tmp/keystore.keystore
-        EOF
-      - |
-        # set up local properties
-        echo "flutter.sdk=$HOME/programs/flutter" > "$FCI_BUILD_DIR/android/local.properties"
-      - flutter packages pub get
-      - cd . && flutter build appbundle --release
-      - find . -name "Podfile" -execdir pod install \;
-      - keychain initialize
-      - app-store-connect fetch-signing-files "$(xcode-project detect-bundle-id)"
-        --type IOS_APP_DEVELOPMENT --create
-      - keychain add-certificates
-      - cd . && flutter build ios --release --no-codesign
-      - xcode-project use-profiles
-      - cd . && xcode-project build-ipa --workspace "ios/Runner.xcworkspace" --scheme
-        "Runner"
+      - name: set up key.properties
+        script: |
+          echo $CM_KEYSTORE | base64 --decode > /tmp/keystore.keystore
+          cat >> "$FCI_BUILD_DIR/android/key.properties" <<EOF
+          storePassword=$CM_KEYSTORE_PASSWORD
+          keyPassword=$CM_KEY_ALIAS_PASSWORD
+          keyAlias=$CM_KEY_ALIAS_USERNAME
+          storeFile=/tmp/keystore.keystore
+          EOF
+      - name: set up local properties
+        script: |
+          echo "flutter.sdk=$HOME/programs/flutter" > "$FCI_BUILD_DIR/android/local.properties"
+      - name: build android
+        script: |
+          flutter packages pub get
+          flutter build appbundle --release
+      - name: build ios
+        script: |
+          find . -name "Podfile" -execdir pod install \;
+          keychain initialize
+          app-store-connect fetch-signing-files "$(xcode-project detect-bundle-id)" --type IOS_APP_DEVELOPMENT --create
+          keychain add-certificates
+          flutter build ios --release --no-codesign
+          xcode-project use-profiles
+          xcode-project build-ipa --workspace "ios/Runner.xcworkspace" --scheme "Runner"
     artifacts:
       - build/**/outputs/**/*.apk
       - build/**/outputs/**/*.aab
