--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,10 +54,10 @@ android {
     signingConfigs {
         release {
             if (System.getenv()["CI"]) { // CI=true is exported by Codemagic
-                storeFile file(System.getenv()["FCI_KEYSTORE_PATH"])
-                storePassword System.getenv()["FCI_KEYSTORE_PASSWORD"]
-                keyAlias System.getenv()["FCI_KEY_ALIAS"]
-                keyPassword System.getenv()["FCI_KEY_PASSWORD"]
+                storeFile file(System.getenv()["CM_KEYSTORE"])
+                storePassword System.getenv()["CM_KEYSTORE_PASSWORD"]
+                keyAlias System.getenv()["CM_KEY_ALIAS_PASSWORD"]
+                keyPassword System.getenv()["CM_KEY_ALIAS_USERNAME"]
             } else {
                 storeFile file("/path/to/local/myreleasekey.keystore")
                 storePassword "password"
