--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -50,7 +50,7 @@ workflows:
         script: |
           find . -name "Podfile" -execdir pod install \;
           keychain initialize
-          app-store-connect fetch-signing-files "$(xcode-project detect-bundle-id)" --type IOS_APP_DEVELOPMENT --create
+          app-store-connect fetch-signing-files "$(xcode-project detect-bundle-id)" --type IOS_APP_STORE --create
           keychain add-certificates
           flutter build ios --release --no-codesign
           xcode-project use-profiles
